test/scc/pp/errors/003.a
003.t:1:10: error: cannot open source file 'file'